ambient.css
* {
  margin: 0;
  padding: 0;
  border: none;
  font-weight: normal;
  list-style: none;
}

html {
  background-color: #eee;
  color: #222;
  font-family: "Helvetica Neue" "Helvetica" sans-serif;
  margin: .2em;
}

#widgets {
  display: flex;
  display: -moz-flex;
  display: -webkit-flex;

  align-content: stretch;
  -webkit-align-content: stretch;

  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;

  justify-content: space-around;
  -webkit-justify-content: space-around;
}

#widgets .widget {
  position: relative;
  margin: 0 .1em .5em;
}

h2 {
  text-align: center;
}

.sandbox {
  max-width: 100%;
  border-radius: .3em;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
  position: relative;
  overflow: hidden;
}

.sandbox img {
  width: 100%;
  height: 100%;
}

.sandbox iframe {
  background-color: white;
  width: 100%;
  height: 100%;
}


/* --- WIDGET-SPECIFIC STYLES --- */
/* clock */
@-webkit-keyframes clock-blink {
    0% {
        opacity:1;
    }
    50% {
        opacity:1;
    }
    100% {
        opacity:0;
    }
}

.widget.clock .colon {
    -webkit-animation-direction: normal;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-name: clock-blink;
    -webkit-animation-timing-function: ease-in-out;
}

.widget.clock div {
    box-shadow: none;
    font-family: "HelveticaNeue-Bold";
    text-align: center;
}

.widget.clock .time {
    font-size: 10em;
}

.widget.clock .date {
    font-size: 5em;
}

